# CalculatorApp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: Calculator.hpp
src/: Calculator.cpp  main.cpp
tests/: CalculatorTest.cpp
